src/objects/Materials__c.object
<CustomObject>
    <description>Created as part of TAL &amp; CC</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>created as part of TAL &amp; CC</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EVM_Materials_Id__c</fullName>
        <externalId>true</externalId>
        <label>EVM Materials Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <description>created as part of TAL &amp; CC</description>
        <label>Material</label>
        <length>115</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>created as part of TAL &amp; CC</description>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Credit_Claim__c</fullName>
        <description>Created as part of TAL &amp; CC</description>
        <label>Claim Name</label>
        <referenceTo>Sales_Credit_Claim__c</referenceTo>
        <relationshipLabel>Materials</relationshipLabel>
        <relationshipName>Materials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Materials</label>
    <nameField>
        <label>Materials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>